stylesheets/screen.css
/* sticky footer per http://mystrd.at/modern-clean-css-sticky-footer/ */
html {
  position: relative;
  min-height: 100%;
}
body {
  margin: 0 0 140px;
}
/* end sticky footer */

div.jumbotron.intro {
  text-align: center;
  background-color: white;
}

img.jumbo.logo {
  width: 300px;
}

div.row.intro h3 {
  text-align: center;
}

.callout {
  margin: 40px 0;
  padding: 20px;
  background-color: gray;
  border-color: #eed3d7;
  color: white;
  font-size: 24px;
  text-align: center;
}

.callout p:last-child {
  margin-bottom: 0;
}

nav.navbar-inverse {
  border-radius: 0px;
}

nav.navbar .navbar-brand {
  padding: 7px;
}

nav.navbar .navbar-header img.logo {
  height: 28px;
  display: block;
  float: left;
  margin-left: 8px;
}

nav.navbar .navbar-header span.name {
  padding-top: 8px;
  display: block;
  float: left;
  margin-left: 8px;
}

.container.content {
  padding-bottom: 20px;
}

footer {
  margin-top: 20px;
  padding: 20px 10px;
  position: absolute;
  left: 0;
  bottom: 0;
  height: 140px;
  width: 100%;
  background-color: #222;
  color: gray;
}

footer div.sponsor {
  text-align: center;
  background-color: #222;
}

footer img.bulletproof {
  width: 180px;
  display: block;
  margin: auto;
}

footer span.bulletproof.subtext {
  color: gray;
  font-size: 80%;
}


@media print, screen and (max-width: 384px) {
  div.jumbotron.intro {
    margin-bottom: 0px;
  }

  img.jumbo.logo {
    width: 150px;
  }

  footer img.bulletproof {
    margin: 10px auto 0px;
  }

  footer span.bulletproof.subtext {
    margin-bottom: 10px;
  }
}

